<resources>
    <string name="app_name">YourRecipe</string>
    <string name="title_activity_main">YourRecipe</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">YourRecipe</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Menu -->
    <string name="menu_home">Home</string>
    <string name="menu_saved_recipe">Saved Recipe</string>
    <string name="menu_about">About</string>

    <!-- Recipe page -->
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="credit">From: %s</string>
    <string name="ingredient_amount">%s %s</string>
    <string name="recipe_saved">Saved, you can see it in Saved recipe screen.</string>

    <!-- Search page -->
    <string name="search_hint">Type here to search</string>
    <string name="search_no_result">There is no result for this keyword.<br/>Please try again with another keyword.</string>

    <!-- About page -->
    <string name="about_title">YourRecipe application</string>
    <string name="about_subtitle">created by Vichita Fongmala</string>

    <string name="github_url">https://github.com/vfongmala</string>
    <string name="linkedin_url">https://www.linkedin.com/in/vfongmala/</string>
    <string name="credit_1">Icons made by <b>Pixel perfect</b> from <b> www.flaticon.com</b></string>
    <string name="credit_2">App icon made by <b>Freepik</b> from <b> www.flaticon.com</b></string>

    <!-- Saved recipe page -->
    <string name="no_saved_recipe">There is no saved recipe. Start browsing to find your favourite recipe and save it.</string>

    <!-- General -->
    <string name="default_error_message">Something went wrong, please try again.</string>

    <!-- Plurals -->
    <plurals name="servings">
        <item quantity="one">%d serving</item>
        <item quantity="other">%d servings</item>
    </plurals>

    <plurals name="minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>

</resources>