<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.vfongmala.yourrecipe.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_recipeActivity"
            app:destination="@id/recipeActivity" />
    </fragment>

    <fragment
        android:id="@+id/nav_saved_recipe"
        android:name="com.vfongmala.yourrecipe.ui.savedrecipe.SavedRecipeFragment"
        android:label="@string/menu_saved_recipe"
        tools:layout="@layout/fragment_saved_recipe" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.vfongmala.yourrecipe.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
    <activity
        android:id="@+id/recipeActivity"
        android:name="com.vfongmala.yourrecipe.ui.recipe.RecipeActivity"
        android:label="activity_recipe"
        tools:layout="@layout/activity_recipe" />
    <activity
        android:id="@+id/searchActivity"
        android:name="com.vfongmala.yourrecipe.ui.search.SearchActivity"
        android:label="activity_search"
        tools:layout="@layout/activity_search" />
</navigation>