<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.search.SearchActivity">


    <EditText
        android:id="@+id/search_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/search_button"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/search_box_background"
        android:maxLines="1"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:layout_margin="@dimen/default_spacing"
        android:hint="@string/search_hint"
        />

    <ImageButton
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_spacing"
        android:layout_marginEnd="@dimen/default_spacing"
        android:layout_marginBottom="@dimen/default_spacing"
        android:src="@android:drawable/ic_menu_search"
        android:background="@color/transparent"
        app:layout_constraintStart_toEndOf="@id/search_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/search_box"
        app:layout_constraintBottom_toBottomOf="@id/search_box"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/result_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/default_spacing"
        android:layout_marginEnd="@dimen/default_spacing"
        android:layout_marginStart="@dimen/default_spacing"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/search_box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:spanCount="@integer/span_count"
        />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loading_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/search_box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading" />

    <LinearLayout
        android:id="@+id/no_result_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/search_box"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone" >

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="@dimen/fallback_image_width"
            android:layout_height="@dimen/fallback_image_height"
            android:layout_gravity="center"
            android:background="@color/white"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/empty" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_spacing"
            android:gravity="center"
            android:text="@string/search_no_result"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/error_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/search_box"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone" >

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="@dimen/fallback_image_width"
            android:layout_height="@dimen/fallback_image_height"
            android:layout_gravity="center"
            android:background="@color/white"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/error" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_spacing"
            android:gravity="center"
            android:text="@string/default_error_message"
            android:textAlignment="center" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>